examples/errors/bad_std_arguments_count.jj
func main
{
    // assert should accept only one argument 
    assert(1, 2, 3, 4, 5);
}